force-app/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__Body01__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Body01__c</fullName>
    <description>Serialised message body.</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>