force-app/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__Deletable__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Deletable__c</fullName>
    <formula>fferpcore__LastAttemptedDelivery__c &lt;= fferpcore__MessageType__r.fferpcore__ExpiryCutoff__c  &amp;&amp;
(ISPICKVAL(fferpcore__State__c, &apos;Complete&apos;) || ISPICKVAL(fferpcore__State__c,&apos;Errors&apos;) || ISPICKVAL(fferpcore__State__c,&apos;Void&apos;))</formula>
    <label>Deletable</label>
    <type>Checkbox</type>
</CustomField>