force-app/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__LastAttemptedDelivery__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LastAttemptedDelivery__c</fullName>
    <defaultValue>null</defaultValue>
    <description>This is the date when the message was lat attempted to be delivered. This date is used by the message reaper to determine if the message can be deleted.</description>
    <label>Last Attempted Delivery</label>
    <type>DateTime</type>
</CustomField>