force-app/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__MessageType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageType__c</fullName>
    <description>Message Type that this Message belongs to</description>
    <label>Message Type</label>
    <referenceTo>fferpcore__MessageType__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>