force-app/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__State__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__State__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Delivering</fullName>
            </value>
            <value>
                <fullName>Errors</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>