force-app/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__TimeToLive__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TimeToLive__c</fullName>
    <defaultValue>null</defaultValue>
    <description>A value that limits the number of resulting messages when sending messages between registered applications. The value is initially set from the Max Message Delivery Loop Count in the ERP Background Processing Settings custom setting. Each resulting message reduces the value by one until it reaches zero. Once this occurs, resulting messages automatically fail.</description>
    <inlineHelpText>A value that limits the number of resulting messages when sending messages between registered applications.</inlineHelpText>
    <label>Time to Live</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>